
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.2"
name = "Chemiverse"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "SciCoDa >=0.2.3,<0.3",
]
